--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loopes</title>
+    <title>homeWork</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Open+Sans:wght@700&family=Source+Sans+3&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1 class="aligncenter">Домашнее Задание №2</h1>
-    <p class="aligncenter"> <img src="/img/дз.jpg" alt="Тебе не повезло..."> </p >
+    <p class="aligncenter"> <img src="img/дз.jpg" alt="Тебе не повезло..."> </p >
     <h2>Тема № 1 - Теги</h2>
     <p>Мы начали изучать теги HTML, практически все теги "открываются и закрываются" соответствующими знаками, которые знают обсалютно все, поэтому мы их приводить не будем:</p>
     <ul>
@@ -69,8 +69,8 @@
         <li><b>button</b> - кнопка</li>
         <li><b>linc</b> - ссылка на внешний ресурс</li>
     </ul>
+    
     <button class="btn1" onclick="alert('Данные загружены!')">В мозг тему №1</button>
-
 
     <h2>Тема № 2 - CSS свойства, компоненты</h2>
     <p>В этой теме были узучены различные стили для элементов веб-страниц</p>
@@ -87,7 +87,7 @@
         <li><b>font-weight</b> - жирность текста</li>
         <li><b> ... </b> - и некоторые другие</li>
     </ol>
-    <button class="btn2" onclick="alert('Место заканчивается...')">В мозг тему №2</button>
+    <button class="btn2"  onclick="alert('Место заканчивается...')">В мозг тему №2</button>
 
     <h2>Тема № 3 - Кнопки (button)</h2>
     <p>Изучали визуализацию кнопок - графические варианты и применение стилей</p>
