--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
             Подробнее
         </P>
     </div>
+    <img src="img/1tel.png" class="imgTel1"/> 
+    <img src="img/2tel.png" class="imgTel2"/> 
+    <img src="img/Haltur.png" class="imgHaltur"/> 
 </body>
 </html>
