--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <P class="all">
             Подробнее
         </P>
+        <p class="Save">
+            Сохранить вход
+        </p>
     </div>
     <img src="img/1tel.png" class="imgTel1"/> 
     <img src="img/2tel.png" class="imgTel2"/> 
