--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework</title>
+    <title>homework3</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -25,15 +25,9 @@
         <P class="speed">
             Быстрый вход по QR-коду
         </P>
-        <P class="camera">
-            Наведите камеру телефона
-        </P>
-        <P class="all">
-            Подробнее
-        </P>
-        <p class="Save">
-            Сохранить вход
-        </p>
+        <P class="camera">Наведите камеру телефона</P>
+        <P class="all">Подробнее</P>
+        <p class="Save">Сохранить вход</p>
     </div>
     <img src="img/1tel.png" class="imgTel1"/> 
     <img src="img/2tel.png" class="imgTel2"/> 
