--- a/index.html
+++ b/index.html
@@ -10,27 +10,21 @@
     <link rel="stylesheet" href="style/st.css">
 </head>
 <body>
-    <div id="div1" >
-        <img src="img/Шапка.png" class="img1"/> 
+    <div class="top_panel">
+        <div class="divStart">
+            <button class="btn-menu"></button>
+            <button class="btn-menu"></button>
+            <div class="divStart-content-full">
+                <button class="btn-user">Loopes70</button>
+                <span>/</span>
+                <button class="btn-repository">homeWork</button>
+            </div>
+
+        </div>
+        <div class="divEnd">
+            <button class="btn-menu"></button>
+        </div>
+
     </div>
-    <div class="panel1">
-        <p class="wellcom" >
-            Вход ВКонтакте
-        </p>
-        <img src="img/Vk.png" class="imgVk"/> 
-        <input type="text" class="login" placeholder="  Телефон или почта">
-        <input type="checkbox" class="chek" checked>
-        <button class="btn1">Войти</button>
-        <img src="img/QR.png" class="imgQR"/> 
-        <P class="speed">
-            Быстрый вход по QR-коду
-        </P>
-        <P class="camera">Наведите камеру телефона</P>
-        <P class="all">Подробнее</P>
-        <p class="Save">Сохранить вход</p>
-    </div>
-    <img src="img/1tel.png" class="imgTel1"/> 
-    <img src="img/2tel.png" class="imgTel2"/> 
-    <img src="img/Haltur.png" class="imgHaltur"/> 
 </body>
 </html>
