--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
         </div>
         <div class="divEnd">
-            <button class="btn-menu"></button>
+            <button class="btn-search"><input class="search" type="text" placeholder="Type / to search">
+            </button>
+            
         </div>
 
     </div>
