--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
     <div class="top_panel">
         <div class="divStart">
-            <button class="btn-menu"></button>
-            <button class="btn-menu"></button>
+            <button class="btn-menu1"></button>
+            <button class="btn-menu2"><img src="img/Cat.png" class="img-cat" alt="cat"></button>
             <div class="divStart-content-full">
                 <button class="btn-user">Loopes70</button>
                 <span>/</span>
                 <button class="btn-repository">homeWork</button>
+                <img src="img/Cat.png" class="img-cat" alt="cat">
             </div>
 
         </div>
@@ -26,7 +27,7 @@
             </button>
             
         </div>
-
+        <!-- <img src="img/menu.png" class="img-menu" alt="menu"> -->
     </div>
 </body>
 </html>
