--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <body>
     <div class="top_panel">
         <div class="divStart">
-            <button class="btn-menu1"></button>
+            <button class="btn-menu1"><img src="img/menu.png" class="img-menu" alt="cat"></button>
             <button class="btn-menu2"><img src="img/Cat.png" class="img-cat" alt="cat"></button>
             <div class="divStart-content-full">
                 <button class="btn-user">Loopes70</button>
                 <span>/</span>
                 <button class="btn-repository">homeWork</button>
-                <img src="img/Cat.png" class="img-cat" alt="cat">
             </div>
-
         </div>
         <div class="divEnd">
-            <button class="btn-search"><input class="search" type="text" placeholder="Type / to search">
+            <button class="btn-search">
+                type / searc
             </button>
-            
+            <button class="btn-search">
+                type / searcwdadadaw
+            </button>
         </div>
-        <!-- <img src="img/menu.png" class="img-menu" alt="menu"> -->
     </div>
 </body>
 </html>
