--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top_panel">
         <div class="divStart">
-            <button class="btn-menu1"></button>
+            <button class="btn-menu1"> <img src="img/menu.png" class="img-menu" alt=""></button>
             <button class="btn-menu2"><img src="img/Cat.png" class="img-cat" alt="cat"></button>
             <div class="divStart-content-full">
                 <button class="btn-user">Loopes70</button>
