--- a/index.html
+++ b/index.html
@@ -3,32 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework44</title>
+    <title>homework</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/st.css">
 </head>
 <body>
-    <div class="top_panel">
-        <div class="divStart">
-
-            <button class="btn-menu1"> <img src="img/menu.png" class="img-menu" alt=""></button>
-            <button class="btn-menu2"><img src="img/Cat.png" class="img-cat" alt="cat"></button>
-            <div class="divStart-content-full">
-                <button class="btn-user">Loopes70</button>
-                <span>/</span>
-                <button class="btn-repository">homeWork</button>
-            </div>
-        </div>
-        <div class="divEnd">
-            <button class="btn-search">
-                type / searc
-            </button>
-            <button class="btn-search">
-                type / searcwdadadaw
-            </button>
+    <div class="tank">
+        <div class="spinner">
+            <div><img src="img\2.png" class="img" alt=""></div>
+            <div><img src="img\1.png" class="img" alt=""></div>
+            <div><img src="img\5.png" class="img" alt=""></div>
+            <div><img src="img\3.png" class="img" alt=""></div>
+            <div><img src="img\4.png" class="img" alt=""></div>
+            <div><img src="img\2.png" class="img" alt=""></div>
         </div>
     </div>
+
 </body>
 </html>
