--- a/index.html
+++ b/index.html
@@ -12,12 +12,55 @@
 <body>
     <div class="tank">
         <div class="spinner">
-            <div><img src="img\2.png" class="img" alt=""></div>
-            <div><img src="img\1.png" class="img" alt=""></div>
-            <div><img src="img\5.png" class="img" alt=""></div>
-            <div><img src="img\3.png" class="img" alt=""></div>
-            <div><img src="img\4.png" class="img" alt=""></div>
-            <div><img src="img\2.png" class="img" alt=""></div>
+            <div class="fadein">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+              </div>
+
+              <div class="fadein">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+              </div>
         </div>
     </div>
 
